20-04-2008
  * fix a problem where attributes or elements starting with the same letter
    sequence could give a false negative result
  * Add a 'clear' attribute to the xmlErrorGet functions that indicates whether
    the error should be cleared or not
  * detect more xml syntax errors

18-04-2009
  * Make the code compiler correctly under windows
  * Introduce a root-node that can hold extra information which is necessary
    for thread safety under windows
  * Add xmlErrorGetString, xmlErrorGetLineNo for syntax error detetction
  * Add xmlErrGetNo for detection of, and clearing the last error

16-04-2008
  * Rename xmlGetNode functions to xmlNodeGet for better consistancy
  * likewise for xmlCopyNode en xmlCompareNode
  * add xmlAttributeGetDouble, xmlAttributeGetInt, xmlAttributeGetString
    xmlAttributeCopyString and xmlAttributeCompareString functions
  * fix some small bugs and problems along the way
  * add support for filtering on attribute value in xmlgrep

21-07-2008
  * change a number of function parameters to const where appropriate
  * fix a problem where the wrong node-name length was returned
  * xmlgrep now also works when only the -e options is specified
  * fix xmlgrep to show the correct node-name (it reported the parent
    node-name in the previous version)

20-07-2008
  * fix __xmlSkipComment to properly find the end of comment tag.
  * add the xmlGetNodeName and xmlCopyNodeName functions
  * add the xmlCopyString function
  * clean up some code

19-07-2008
  * rewrite the code to always recursively walk the node tree when searching
    for a particular node. this is required for cases where a node with a
    particular name is located deeper in a node with the same name;
    for example -r /configuration/device/reference/device would fail in the 
    previous verion
  * rename xmlGetElement to xmlGetNodeNum and add the possibility to request
    the nth node with this name
  * rename xmlGetNumElements to xmlGetNumNodes

06-07-2008